<resources>
    <string name="app_name">Xpertech</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="intro_title">Welcome to Xpertech!</string>
    <string name="intro_scan_qr">Please scan the QR Code from your cable box to enter.</string>
    <string name="intro_enter_code">Enter your account number</string>
    <string name="intro_not_qr">Or enter your account number</string>

    <string name="menu_home">Home</string>
    <string name="menu_troubleshoot">Troubleshoot</string>
    <string name="menu_manual">User Manual</string>
    <string name="menu_self_install">Self-Install Guide</string>
    <string name="menu_remote">Remote Control Assistant</string>
    <string name="menu_package">Packages and Channel Lineup</string>

    <string name="btn_enter_code">PROCEED</string>
    <string name="btn_cancel">CANCEL</string>

    //Troubleshoot procedure for first box

    //Troubleshoot #1
    <string name="troubleshoot_title_01">Set Top Box (STB) Configuration</string>
    <string name="troubleshoot_01_01">On the Remote, press and hold OK button and Power button simultaneously until LED blinks 2x</string>
    <string name="troubleshoot_01_02">Press 9-8-2 on the remote to unlock it for RCU programming, LED should blink 4x</string>
    <string name="troubleshoot_01_03">Press and hold the OK button and Power button again simultaneously for 3-5 seconds until the LED blinks 2x</string>
    <string name="troubleshoot_01_04">Press the assigned code 4998/2319 to be controlled</string>
    <string name="troubleshoot_01_05">Remote control LED will blink 2x once correct code is entered</string>
    <string name="troubleshoot_01_06">Press and hold the OK button and Power button simultaneously for 3-5 seconds until the LED blinks 2x</string>
    <string name="troubleshoot_01_07">Press 9-8-2 on the remote to lock it for RCU programming, LED should blink 2x</string>

    <string name="fragment_intro_instruction">Please follow the steps provided on the screen and answer the questions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
