<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:text="@string/troubleshoot_title_01"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_01"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_02"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_03"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_04"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_05"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_06"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/troubleshoot_01_07"/>

    </LinearLayout>


</ScrollView>