<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/intro_padding"
    android:paddingRight="@dimen/intro_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_enter_code"
        android:textColor="@android:color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/user_qr_accNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:inputType="number"
        android:ems="10"/>

    <Button
        android:layout_marginTop="@dimen/intro_padding"
        android:id="@+id/btn_enter_accNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enter_code"/>

    <Button
        android:id="@+id/btn_enter_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"/>
</LinearLayout>